--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "host" : "http://opendata-download-metfcst.smhi.se",
   "port" : 80,
-  "apiBasePath" : "/api/category/pmp1.5g/version/1/"
+  "apiBasePath" : "/api/category/pmp1.5g/version/1/",
+  "cacheTTL" : 900
 }
